gcc/testsuite/rust/rustc/ui/issues/issue-6458-4.rs
fn foo(b: bool) -> Result<bool,String> { // { dg-error ".E0308." "" { target *-*-* } }
    Err("bar".to_string());
}

fn main() {
    foo(false);
}

